# gemini-ox

./: Cargo.toml
src/: lib.rs
src/files/: mod.rs
src/messages/: message.rs  mod.rs  tools.rs
